--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Voyages around the world'
 - !lcc 'G'
 - !lcsh 'Predpriiatie (Ship)'
+- GITenberg
 title: A New Voyage Round the World in the Years 1823, 24, 25, and 26. Vol. 1
 url: http://www.gutenberg.org/ebooks/25693
